[package]
name = "perf-metrics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctor = "0.2.5"
tokio = { version = "1.21", features = ["sync"], default-features = false }
revm = { git = "https://github.com/megaeth-labs/revm.git", branch = "andy/debug/make-utils-independent", features = ["std", "secp256k1"], default-features = false }
revm-utils = { git = "https://github.com/anonymousGiga/utils.git", optional = true }

[features]
enable_opcode_metrics = [
    "revm-utils",
    "revm/enable_opcode_metrics"]
enable_cache_record = ["revm-utils"]
enable_execution_duration_record = ["revm-utils",
    "revm/enable_transact_measure",
]
enable_tps_gas_record = ["revm-utils"]
